--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hiderbrandon.github.io/plastic_web",
+  "homepage": "http ://plasticosantander.com",
   "name": "the_plastic_web",
   "version": "0.1.0",
   "private": true,
